fix: fix issue with alignment

--- a/src/pages/ProductPage/components/DetailedProductSection.scss
+++ b/src/pages/ProductPage/components/DetailedProductSection.scss
@@ -74,6 +74,7 @@
   left: 50%;
   z-index: 1000;
   display: flex;
+  align-items: center;
   max-width: 820px;
   max-height: 820px;
   padding: 40px;
@@ -85,8 +86,8 @@
 
   &__image {
     width: 100%;
-    max-height: 80%;
-    padding: 10px;
+    height: 100%;
+    padding: 20px;
     object-fit: contain;
   }
 }
@@ -120,4 +121,13 @@
 
 .close-button:after {
   transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.swiper {
+  z-index: 0;
+}
+
+.swiper-slider {
+  display: flex;
+  align-items: center;
 }
